# abcwow

./: ProjectHome.md  TODO.txt
ABCXaos/: configure.ac
ABCXaos/src/arcemu-shared/: svn_revision.h
ABCXaos/src/arcemu-world/: ArathiBasin.cpp  AreaTrigger.cpp  Arenas.cpp  Channel.h  ChatHandler.cpp  ConsoleCommands.cpp  Creature.cpp  Creature.h  DynamicObject.cpp  EyeOfTheStorm.cpp  Guild.cpp  ItemInterface.cpp  MapMgr.cpp  MapMgr.h  MiscHandler.cpp  Object.cpp  Player.cpp  Player.h  QuestMgr.h  RaidHandler.cpp  ReputationHandler.cpp  ScriptMgr.cpp  ScriptMgr.h  Spell.cpp  Spell.h  SpellAuras.cpp  SpellAuras.h  SpellEffects.cpp  SpellFixes.cpp  SpellTarget.cpp  StdAfx.h  TaxiMgr.cpp  Unit.cpp  WorldCreator.cpp  WorldStateManager.cpp  WorldStateManager.h
ABCXaos/win/VC80/: arcemu-world.vcproj
ABCXaos/win/VC90/: arcemu-world.vcproj
Arcemu/: AUTHORS  arcemu-tag
Arcemu/extras/GMH/: NPCForm.xml  PlayerForm.xml
Arcemu/sql/world_updates/: 672_instance-system.sql
Arcemu/src/: arcemu-realms.conf
Arcemu/src/arcemu-logonserver/: LogonCommServer.cpp
Arcemu/src/arcemu-shared/: arcemuConfig.h
Arcemu/src/arcemu-world/: AIInterface.cpp  AIInterface.h  Arenas.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  Chat.h  ChatHandler.cpp  CollideInterface.h  ConsoleCommands.cpp  Creature.cpp  DatabaseCleaner.cpp  GameObject.cpp  GroupHandler.cpp  Item.cpp  Item.h  ItemHandler.cpp  ItemInterface.cpp  Level3.cpp  LogonCommHandler.cpp  LootMgr.cpp  Main.cpp  MapMgr.cpp  Master.cpp  MiscHandler.cpp  Object.cpp  Object.h  ObjectMgr.cpp  ObjectMgr.h  Opcodes.cpp  Opcodes.h  Pet.cpp  Player.cpp  Player.h  QuestCommands.cpp  QuestMgr.cpp  ReputationHandler.cpp  ScriptMgr.cpp  ScriptMgr.h  Spell.cpp  Spell.h  (+12 more)
Arcemu/src/scripts/src/InstanceScripts/: Instance_BlackrockDepths.cpp  Makefile.am  Raid_SerpentshrineCavern.cpp  Raid_TheEye.cpp  Raid_ZulAman.cpp  Setup.h
arc_1239/: compile.sh  configure.ac  extract_svn_revision.sh
arc_1239/src/arcemu-shared/: Log.cpp  svn_revision.h
arc_1239/src/scripts/src/GossipScripts/: Makefile.am
arc_791/sql/: character_structure.sql
arc_791/src/scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Makefile.am
arcemu_old/src/: arcemu-logonserver.conf
branch/junk_box/: ASCENT3236vsABC188.patch  abcwow_3208.patch
branch/sql_update/: Spell_2_3.rar  arena_sets_2.2.sql  creature_names_r82.sql  deal_with_the_devil.sql
branch/trunk_2319_test/: make_precompiled_header.sh
branch/trunk_3052/: NEWS  configure.ac
branch/trunk_3944/: make_precompiled_header.sh
junk_box/: 1089-to-683.patch  2523.patch  DBC_2.2.0.rar  SpellGroupType.html  abc-196-to-436-at-3944.patch  abcwow_3143.patch  abcwow_3550.patch  abcwow_9_16.patch  abcwow_antrix_rev1976_scripts.patch  abcwow_antrix_rev2319.patch  abcwow_rev72_antrix_rev2301.patch  ai_agents.sql  arc1059-abc657.patch  r60-2030.patch
junk_box/dbc2sql_php/: DBC.php  dbclayout.xml
junk_box/php_parsers/: config.php  heroic_trash.php  parse_item_loot.php  parse_mob_drops.php  parse_mob_skinning.php  parse_prospecting_loot.php  quest_drops.php  table_diff.php
sql_update/: arena_sets_2.2.sql  ascent-vs-abc-3443.patch  creature_names_r82.sql  deal_with_the_devil.sql  inFront.sql  moon_pp_query_update.sql  prospecting_loot.sql  spell_data_extra.sql  sql_update_2030to2319.sql
sql_update/230_update/: 2319to2785_realm.sql
sql_update/custom fixes/: items.sql
sql_update/old/: random_prop.sql  spell112_diff.sql
trunk/ABCXaos/: configure.ac
trunk/Arcemu/: configure.ac
trunk/arc_1239/: configure.ac  extract_svn_revision.sh
trunk/arc_1239/src/scripts/src/InstanceScripts/: Base.h  Instance_HellfireRamparts.cpp  Makefile.am  Raid_BlackwingLair.cpp  Raid_SerpentshrineCavern.cpp  Setup.cpp
trunk/arc_791/src/scripts/src/MiscScripts/: Makefile.am
trunk/arcemu_old/: configure.ac
trunk/junk_box/: 1089-to-683.patch  ASCENT3944vsABC195.patch  Raid_ZulAman.cpp  abc-196-to-436-at-3944.patch  abcwow_antrix_rev1976.patch  abcwow_rev72_antrix_rev2030.patch  abcwow_rev72_antrix_rev2030_scripts.patch  arc964-abc625.patch
trunk/sql_update/: 147_world_modImmunities.sql  Spell_2_4.rar  ai_threattospellid.sql  arena_sets_2.2.sql  deal_with_the_devil.sql  disenchanting_loot.sql  spell_data_extra.sql  spell_data_extra_r76.sql  sql_update_2030to2301.sql  sql_update_2030to2319.sql
trunk/trunk_2030/: configure.ac
trunk/trunk_2319_test/: ltmain.sh
trunk/trunk_3052/src/scripts/src/MiscScripts/: Makefile.am
trunk/trunk_3944/: configure.ac
trunk_2030/: make_precompiled_header.sh
trunk_2030/extras/: hunter_todo.txt  warrior_todo.txt
trunk_2030/win/: ascentVC71.sln
trunk_2319/: configure.ac
trunk_2319/sql/: ascent_character_structure.sql
trunk_2319/win/: ascentVC80.sln
trunk_2319_test/extras/: hunter_todo.txt  mage_todo.txt  paladin_todo.txt  shaman_todo.txt  warrior_todo.txt
trunk_2319_test/src/: ascent.conf
trunk_3052/win/: ascentVC71.sln  ascentVC80.sln
trunk_3944/: INSTALL  Makefile.am
trunk_3944/extras/: general_todo.txt  hunter_todo.txt  priest_todo.txt
trunk_3944/src/: ascent-world.conf
trunk_4574/: ascent-tag
trunk_4574/src/: ascent-world.conf
trunk_4574/win/: ascentVC80.sln
(+2092 files in other folders)
