INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libInstanceScripts.la

libInstanceScripts_la_SOURCES = Instance_Arcatraz.cpp \
Instance_AuchenaiCrypts.cpp \
Instance_BlackrockDepths.cpp \
Instance_BloodFurnace.cpp \
Instance_Botanica.cpp \
Instance_Deadmines.cpp \
Instance_DireMaul.cpp \
Instance_HellfireRamparts.cpp \
Instance_ManaTombs.cpp \
Instance_Mauradon.cpp \
Instance_RazorfenDowns.cpp \
Instance_ScarletMonastery.cpp \
Instance_Scholomance.cpp \
Instance_SethekkHalls.cpp \
Instance_ShadowLabyrinth.cpp \
Instance_ShadowfangKeep.cpp \
Instance_TheMechanar.cpp \
Instance_TheShatteredHalls.cpp \
Instance_TheSlavePens.cpp \
Instance_TheSteamvault.cpp \
Instance_TheUnderbog.cpp \
Instance_Uldaman.cpp \
Raid_BlackTemple.cpp \
Raid_BlackwingLair.cpp \
Raid_CoT_BattleOfMountHyjal.cpp \
Raid_GruulsLair.cpp \
Raid_Karazhan.cpp \
Raid_MoltenCore.cpp \
Raid_Naxxramas.cpp \
Raid_OnyxiasLair.cpp \
Raid_SerpentshrineCavern.cpp \
Raid_TheEye.cpp \
Raid_ZulGurub.cpp \
Raid_Magtheridons_Lair.cpp \
GenericAI.cpp \
Setup.cpp
