INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../arcemu-shared
INCLUDES += -I$(srcdir)/../../../arcemu-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libGossipScripts.la

libGossipScripts_la_SOURCES = Gossip_Battlemaster.cpp Gossip_Innkeepers.cpp GuardGossip.cpp Setup.cpp \
								Gossip_Mulgore.cpp Gossip_Shattrath.cpp Gossip_Tanaris.cpp Token_Vendor.cpp \
								TrainerGossip.cpp